<resources>
    <string name="app_name">Mango</string>
    <string name="title_authorization">Авторизация</string>
    <string name="title_registration">Регистрация</string>
    <string name="sent_auth_code">Отправить код</string>
    <string name="send_auth_code_desc">Введите номер телефона, и дождитесь прихода кода авторизации.</string>
    <string name="ru_emoji">🇷🇺</string>
    <string name="hint_name">Имя:</string>
    <string name="hint_login">Логин:</string>
    <string name="title_do_registration">Зарегистрироваться</string>
    <string name="err_send_auth_code">Не получилось отправить верификационный код, попробуйте еще раз.</string>
    <string name="err">Ошибка</string>
    <string name="ok">Ок</string>
    <string name="hint_enter_auth_code">Введите код авторизации: </string>
    <string name="confirm_auth_code">Подтвердить код</string>
    <string name="title_choose_country">Выберете страну</string>
    <string name="phone_prefix_template">+%1$d</string>
    <string name="err_invalid_phone">Неправильный номер телефона</string>
    <string name="err_confirmation_code_not_valid">Неправильный код авторизации</string>
    <string name="err_name_field_validation">От 3 до 30 букв</string>
    <string name="err_username_validation">Латинский алфавит, цифры, спецсимволы (_,-)</string>
    <string name="err_username_not_valid_message">Неправильный логин</string>
    <string name="err_name_not_valid_message">Неправильное имя пользователя</string>
    <string name="err_registration_internal">Что-то пошло не так :(\nПопробуйте зарегистрироваться чуть позже.</string>
</resources>