<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_registration"
        style="@style/Text.ScreenTitle"
        android:text="@string/title_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/icon_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_registration"
        app:tint="@color/salat" />


    <TextView
        android:id="@+id/btn_country"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:gravity="center|start"
        android:text="@string/ru_emoji"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="@id/field_phone"
        app:layout_constraintEnd_toStartOf="@id/field_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/field_phone" />


    <EditText
        android:id="@+id/field_phone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_country"
        app:layout_constraintTop_toBottomOf="@id/icon_reg"
        tools:text="+79131039900" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_field_name"
        style="@style/FieldContainer"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_field_username"
        style="@style/FieldContainer"

        android:hint="@string/hint_login"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_field_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registration"
        style="@style/Button.Base"
        android:text="@string/title_do_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>