<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_auth"
        android:text="@string/title_authorization"
        style="@style/Text.ScreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/btn_country"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="32sp"
        android:gravity="center|start"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@id/field_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/field_phone"
        app:layout_constraintBottom_toBottomOf="@id/field_phone"
        android:text="@string/ru_emoji"/>

    <EditText
        android:id="@+id/field_phone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/btn_country"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        tools:text="+79131039900"
        android:focusable="false"
        android:clickable="false"
        android:inputType="none"
        app:layout_constraintTop_toBottomOf="@id/icon_auth_code"
        />

    <ImageView
        android:id="@+id/icon_auth_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_message_icon"
        app:tint="@color/salat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_auth"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/fieldAuthCode"
        style="@style/Field.Base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_phone"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_auth_code"/>

    <Button
        android:id="@+id/btn_confirm_auth_code"
        style="@style/Button.Base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/confirm_auth_code"/>


</androidx.constraintlayout.widget.ConstraintLayout>