<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <TextView
        android:id="@+id/title_auth"
        style="@style/Text.ScreenTitle"
        android:text="@string/title_authorization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_auth_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_message_icon"
        app:tint="@color/salat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_auth"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Text.Description"
        android:text="@string/send_auth_code_desc"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_auth_code"/>




    <TextView
        android:id="@+id/btn_country"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="32sp"
        android:gravity="center|start"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@id/field_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/field_phone"
        app:layout_constraintBottom_toBottomOf="@id/field_phone"
        android:text="@string/ru_emoji"/>

    <EditText
        android:id="@+id/field_phone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/btn_country"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        tools:text="+79131039900"
        app:layout_constraintTop_toBottomOf="@id/txt_description"
        />


    <Button
        android:id="@+id/btn_send_auth_code"
        style="@style/Button.Base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:text="@string/sent_auth_code"/>

    <ProgressBar
        android:id="@+id/loadingIndicator"
        style="@style/LoadingIndicator.Base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>